--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /.vs/Matrix/v16/Server/sqlite3
+/.vs/MatrixSolution/v16/Server/sqlite3/db.lock
+/.vs/MatrixSolution/v16/Server/sqlite3/storage.ide
+/.vs/MatrixSolution/v16/Server/sqlite3/storage.ide-shm
+/.vs/MatrixSolution/v16/Server/sqlite3/storage.ide-wal
