update project to include matrixfunctions unit tests

--- a/MatrixTester/MatrixTester.csproj
+++ b/MatrixTester/MatrixTester.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MatrixFunctionsTest.cs" />
     <Compile Include="MatrixTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
