--- a/MatrixTester/MatrixTester.csproj
+++ b/MatrixTester/MatrixTester.csproj
@@ -52,6 +52,7 @@
     <Compile Include="MatrixFunctionsTest.cs" />
     <Compile Include="MatrixTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VectorTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
