gitignore bye bye
there's a lot of dumb files I don't care about in this solution

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,25 @@
 /.vs/MatrixSolution/v16/Server/sqlite3/storage.ide
 /.vs/MatrixSolution/v16/Server/sqlite3/storage.ide-shm
 /.vs/MatrixSolution/v16/Server/sqlite3/storage.ide-wal
+*.dtbcache
+*.lock
+*.ide
+*ide-shm
+*.ide-wal
+*.json
+*.sqlite
+*.log
+*.manifest
+*.testlog
+*.cache
+*.xml
+MatrixTester/obj/Debug/MatrixTester.csprojAssemblyReference.cache
+Matrix/obj/project.assets.json
+Matrix/obj/MatrixLibrary.csproj.nuget.g.targets
+Matrix/obj/MatrixLibrary.csproj.nuget.g.props
+Matrix/obj/MatrixLibrary.csproj.nuget.dgspec.json
+Matrix/obj/MatrixLibrary.csproj.nuget.cache
+Matrix/obj/Debug/netstandard2.0/MatrixLibrary.csprojAssemblyReference.cache
+Matrix/obj/Debug/netstandard2.0/MatrixLibrary.assets.cache
+.vs/slnx.sqlite
+.vs/MatrixLibrary/v16/.suo
